--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -13,7 +13,7 @@ This Scenario plays out over 13 Rounds.
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 4
 
-\textbf{Starting Resources:} 14 \svg{gold}, 4 \svg{building_materials}, 1 \svg{valuables}
+\textbf{Starting Resources:} 12 \svg{gold}, 2 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
@@ -25,8 +25,8 @@ This Scenario plays out over 13 Rounds.
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \bronze\ Dwelling
-  \item Each player may build the \svg{building_special_tent} building at a discount of 4 \svg{gold} and 2 \svg{building_materials}.
+  \item Each player may build the \svg{building_special_tent} building at a discount of 2 \svg{gold} and 2 \svg{building_materials}.
+  \item \bronze\ Dwelling and 2 \svg{gold} \textbf{or} \\ Mage Guild and 1 \svg{valuables}.
 \end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes 3 Far (II–III) Map Tiles.
@@ -38,10 +38,9 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
   \item P × Starting (I) Map Tile
   \item 2P × Near (IV–V) Map Tiles
   \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
-  \item P × Center (VI–VII) Map Tile
+  \item P × Center (VI–VII) Map Tiles
 \end{itemize}
 
-\columnbreak
 \textbf{Additionally, for 4 players:}
 \begin{itemize}
   \item 1 × Center (VI–VII) Map Tile with a Dragon Utopia
@@ -53,17 +52,16 @@ The game ends at the end of the Round when any of the following conditions are m
 \begin{itemize}
  \item \textbf{4 players:} One player has defeated each other player's Main Heroes once. \textit{That player wins the game immediately.}
  \item One player has conquered both Dragon Utopias. \textit{That player wins the game immediately.}
- \item At the end of Round 13.
 \end{itemize}
 
-If no player has achieved an immediate victory, the player controlling a Dragon Utopia wins.
+If at the end of Round 13 no player has achieved an immediate victory, the player controlling a Dragon Utopia wins.
 If different players control the two Utopias, they each draw Cards up to their \svg{hand} Limit and engage in a final Combat -- the winner is the victor.
 If no one controls a Dragon Utopia, all players lose.
 \subsection*{\MakeUppercase{Timed Events}}
 
 \textbf{\nth{2} Round:}
 \begin{itemize}
-  \item Recruit one of your Units that has died for free.
+  \item At the start of your turn, you may pay 3 \svg{gold} to Search(3) your Deck.
 \end{itemize}
 \textbf{\nth{4} Round:}
 \begin{itemize}
@@ -83,12 +81,12 @@ If no one controls a Dragon Utopia, all players lose.
   \item \textbf{Grail Token}: When gained, gain +1 \svg{morale_positive} and Search (4) \svg{spellpower} or \svg{artifact}. At the start of your turn, gain +1 \svg{morale_positive} and 5 \svg{gold}. Both Main and Secondary Heroes may pick up the Grail Token.
   \item Level VII Neutral Combats cannot be skipped.
   \item A defeated Main Hero may Empower one Defense Statistic Card from his M\&M Deck and gain +1 \svg{movement} for the next Round.
-  \item After winning a Combat against another player's Main Hero, draw up to your Hand Limit and discard 1 Card.
+  \item After winning a Combat against another player's Main Hero, draw Cards up to your \svg{hand} Limit and discard 1 Card.
   \item Level VII \textbf{Settlements/Random Town}: Increase all incomes by 1 space, Draw 2 Cards and gain +1 \svg{movement}.
   \item \textbf{Dragon Utopias} are guarded only by dragons.
   \item Upon flagging a \textbf{Dragon Utopia}, choose one option and then put a Black Cube:
   \begin{itemize}
-    \item Gain 5 \svg{gold} and sacrifice any number of Units, then recruit one of the defeated dragons at a discount equal to the total recruitment cost of the sacrificed Units (to a minimum of 0).
+    \item Gain 5 \svg{gold} and sacrifice any number of Units, then recruit one of the defeated dragons at a discount equal to the total recruitment cost of the sacrificed Units (to a minimum of 0 \svg{gold}).
     \item Gain 20 \svg{gold} and Search (3) \svg{spellpower} or (3) \svg{artifact}.
   \end{itemize}
 \end{itemize}
