--- a/translations/back_cover.tex/cs.po
+++ b/translations/back_cover.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-27 09:55+0200\n"
+"POT-Creation-Date: 2025-10-23 22:06+0100\n"
 "PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -27,11 +27,11 @@ msgstr "\\restoregeometry"
 #: sections/back_cover.tex:12
 msgid ""
 "\\iftoggle{noartbackground}{}{ \\begin{tikzpicture}[remember picture, "
-"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current "
-"page.center) { \\includegraphics[height=\\paperheight, keepaspectratio]"
-"{\\layout/back.jpg} }; \\end{tikzpicture} }"
+"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current page."
+"center) { \\includegraphics[height=\\paperheight, keepaspectratio]{\\layout/"
+"back.jpg} }; \\end{tikzpicture} }"
 msgstr ""
 "\\iftoggle{noartbackground}{}{ \\begin{tikzpicture}[remember picture, "
-"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current "
-"page.center) { \\includegraphics[height=\\paperheight, keepaspectratio]"
-"{\\layout/back.jpg} }; \\end{tikzpicture} }"
+"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current page."
+"center) { \\includegraphics[height=\\paperheight, keepaspectratio]{\\layout/"
+"back.jpg} }; \\end{tikzpicture} }"
