--- a/translations/intro_and_toc.tex/intro_and_toc.tex.pot
+++ b/translations/intro_and_toc.tex/intro_and_toc.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-10-06 10:06+0000\n"
+"POT-Creation-Date: 2025-10-23 22:06+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -96,9 +96,8 @@ msgstr ""
 #: sections/intro_and_toc.tex:53
 msgid ""
 "\\iftoggle{noartbackground}{}{ \\AddToHookNext{shipout/background}{ \\put "
-"(0in,-\\paperheight)"
-"{\\includegraphics[width=\\paperwidth,height=\\paperheight]{\\layout/"
-"tausta.png}} } }"
+"(0in,-\\paperheight){\\includegraphics[width=\\paperwidth,"
+"height=\\paperheight]{\\layout/tausta.png}} } }"
 msgstr ""
 
 #. type: tikzpicture
