--- a/translations/back_cover.tex/ru.po
+++ b/translations/back_cover.tex/ru.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-06-27 09:55+0200\n"
+"POT-Creation-Date: 2025-10-23 22:06+0100\n"
 "PO-Revision-Date: 2025-06-27 09:55+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -26,7 +26,7 @@ msgstr ""
 #: sections/back_cover.tex:12
 msgid ""
 "\\iftoggle{noartbackground}{}{ \\begin{tikzpicture}[remember picture, "
-"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current "
-"page.center) { \\includegraphics[height=\\paperheight, keepaspectratio]"
-"{\\layout/back.jpg} }; \\end{tikzpicture} }"
+"overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current page."
+"center) { \\includegraphics[height=\\paperheight, keepaspectratio]{\\layout/"
+"back.jpg} }; \\end{tikzpicture} }"
 msgstr ""
