--- a/translations/random_scenario.tex/pl.po
+++ b/translations/random_scenario.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-07-02 10:48+0200\n"
+"POT-Creation-Date: 2025-10-23 22:06+0100\n"
 "PO-Revision-Date: 2025-06-22 00:57+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -78,11 +78,10 @@ msgstr ""
 "\n"
 
 #. type: multicols
-#: coops/sentinels.tex:142 coops/close_to_enemies.tex:143
-#: coops/stand_united.tex:87 clash/dragoncurse_castle.tex:85
-#: campaigns/inferno_devilish_plan.tex:224 campaigns/castle_greek_gift.tex:120
-#: campaigns/castle_greek_gift.tex:271 sections/credits.tex:28
-#: sections/random_scenario.tex:304
+#: coops/sentinels.tex:142 coops/stand_united.tex:87
+#: clash/dragoncurse_castle.tex:85 campaigns/inferno_devilish_plan.tex:224
+#: campaigns/castle_greek_gift.tex:120 campaigns/castle_greek_gift.tex:271
+#: sections/credits.tex:28 sections/random_scenario.tex:304
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -440,17 +439,17 @@ msgstr "\\textbf{\\textcolor{rampartbg}{Gracz 1: Bastion}}"
 #. type: minipage
 #: sections/random_scenario.tex:163
 msgid ""
-"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-"
-"xl-1.png}{1}\\playerarrow{-2.8}{0.2}{60}{castlebg} \\hfill "
-"\\playerimage{\\maps/free-for-all-xl-2.png}{2}\\playerarrow{-1.5}{0.2}{160}"
-"{infernobg} \\hfill \\playerimage{\\maps/free-for-all-xl-3.png}{3} "
-"\\playerarrow{-4.3}{2.6}{-60}{rampartbg}"
+"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-xl-1."
+"png}{1}\\playerarrow{-2.8}{0.2}{60}{castlebg} \\hfill \\playerimage{\\maps/"
+"free-for-all-xl-2.png}{2}\\playerarrow{-1.5}{0.2}{160}{infernobg} \\hfill "
+"\\playerimage{\\maps/free-for-all-xl-3.png}{3} \\playerarrow{-4.3}{2.6}{-60}"
+"{rampartbg}"
 msgstr ""
-"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-"
-"xl-1.png}{1}\\playerarrow{-2.8}{0.2}{60}{castlebg} \\hfill "
-"\\playerimage{\\maps/free-for-all-xl-2.png}{2}\\playerarrow{-1.5}{0.2}{160}"
-"{infernobg} \\hfill \\playerimage{\\maps/free-for-all-xl-3.png}{3} "
-"\\playerarrow{-4.3}{2.6}{-60}{rampartbg}"
+"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-xl-1."
+"png}{1}\\playerarrow{-2.8}{0.2}{60}{castlebg} \\hfill \\playerimage{\\maps/"
+"free-for-all-xl-2.png}{2}\\playerarrow{-1.5}{0.2}{160}{infernobg} \\hfill "
+"\\playerimage{\\maps/free-for-all-xl-3.png}{3} \\playerarrow{-4.3}{2.6}{-60}"
+"{rampartbg}"
 
 #. type: center
 #: sections/random_scenario.tex:163 sections/random_scenario.tex:181
@@ -464,17 +463,17 @@ msgstr "{\\rule{0.98\\textwidth}{0.5pt}}"
 #. type: minipage
 #: sections/random_scenario.tex:181
 msgid ""
-"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-"
-"xl-4.png}{4}\\playerarrow{-3.2}{3.2}{-30}{castlebg} \\hfill "
-"\\playerimage{\\maps/free-for-all-xl-5.png}{5}\\playerarrow{-0.8}{1.4}{210}"
-"{infernobg} \\hfill \\playerimage{\\maps/free-for-all-xl-6.png}{6} "
-"\\playerarrow{-3.6}{1.2}{120}{rampartbg}"
+"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-xl-4."
+"png}{4}\\playerarrow{-3.2}{3.2}{-30}{castlebg} \\hfill \\playerimage{\\maps/"
+"free-for-all-xl-5.png}{5}\\playerarrow{-0.8}{1.4}{210}{infernobg} \\hfill "
+"\\playerimage{\\maps/free-for-all-xl-6.png}{6} \\playerarrow{-3.6}{1.2}{120}"
+"{rampartbg}"
 msgstr ""
-"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-"
-"xl-4.png}{4}\\playerarrow{-3.2}{3.2}{-30}{castlebg} \\hfill "
-"\\playerimage{\\maps/free-for-all-xl-5.png}{5}\\playerarrow{-0.8}{1.4}{210}"
-"{infernobg} \\hfill \\playerimage{\\maps/free-for-all-xl-6.png}{6} "
-"\\playerarrow{-3.6}{1.2}{120}{rampartbg}"
+"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-xl-4."
+"png}{4}\\playerarrow{-3.2}{3.2}{-30}{castlebg} \\hfill \\playerimage{\\maps/"
+"free-for-all-xl-5.png}{5}\\playerarrow{-0.8}{1.4}{210}{infernobg} \\hfill "
+"\\playerimage{\\maps/free-for-all-xl-6.png}{6} \\playerarrow{-3.6}{1.2}{120}"
+"{rampartbg}"
 
 #. type: tikzpicture
 #: sections/random_scenario.tex:188
@@ -539,18 +538,18 @@ msgid ""
 "{-0.3}{60}{infernobg} \\playerarrow{-0.6}{4.0}{-120}{castlebg} \\hfill "
 "\\playerimage{\\maps/free-for-all-xl-far-2.png}{8}\\playerarrow{-4.7}{4.3}"
 "{-60}{rampartbg} \\playerarrow{-5.2}{-0.1}{30}{infernobg} \\playerarrow{-0.9}"
-"{4.3}{-150}{castlebg} \\hfill \\playerimage{\\maps/free-for-all-xl-"
-"finish.png}{9} \\playerarrow{-5.2}{4.3}{-30}{rampartbg} \\playerarrow{-5.5}"
-"{0.9}{30}{infernobg} \\playerarrow{-0.3}{4.3}{-150}{castlebg}"
+"{4.3}{-150}{castlebg} \\hfill \\playerimage{\\maps/free-for-all-xl-finish."
+"png}{9} \\playerarrow{-5.2}{4.3}{-30}{rampartbg} \\playerarrow{-5.5}{0.9}{30}"
+"{infernobg} \\playerarrow{-0.3}{4.3}{-150}{castlebg}"
 msgstr ""
 "\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-xl-"
 "far-1.png}{7}\\playerarrow{-4.4}{3.8}{-30}{rampartbg} \\playerarrow{-3.9}"
 "{-0.3}{60}{infernobg} \\playerarrow{-0.6}{4.0}{-120}{castlebg} \\hfill "
 "\\playerimage{\\maps/free-for-all-xl-far-2.png}{8}\\playerarrow{-4.7}{4.3}"
 "{-60}{rampartbg} \\playerarrow{-5.2}{-0.1}{30}{infernobg} \\playerarrow{-0.9}"
-"{4.3}{-150}{castlebg} \\hfill \\playerimage{\\maps/free-for-all-xl-"
-"finish.png}{9} \\playerarrow{-5.2}{4.3}{-30}{rampartbg} \\playerarrow{-5.5}"
-"{0.9}{30}{infernobg} \\playerarrow{-0.3}{4.3}{-150}{castlebg}"
+"{4.3}{-150}{castlebg} \\hfill \\playerimage{\\maps/free-for-all-xl-finish."
+"png}{9} \\playerarrow{-5.2}{4.3}{-30}{rampartbg} \\playerarrow{-5.5}{0.9}{30}"
+"{infernobg} \\playerarrow{-0.3}{4.3}{-150}{castlebg}"
 
 #. type: subsection{#2}
 #: sections/random_scenario.tex:233
@@ -632,9 +631,9 @@ msgstr ""
 "\\svg{building_materials}, 1 \\svg{valuables}} & \\lightcellleft[1.4]{20 "
 "\\svg{gold}, 8 \\svg{building_materials}, 2 \\svg{valuables}}\\\\ "
 "\\end{tabularx} \\bigskip {\\color{\\iftoggle{noartbackground}{black}"
-"{darkyellow}}\\rule{\\textwidth}{0.5pt}} \\vspace*{1em} \\textbf{Siła Miasta}"
-"\\\\ \\bigskip \\begin{tabularx}{0.99\\linewidth}{p{0.12\\linewidth}XXXX} & "
-"\\darkcell{Osada} & \\darkcell{Ratusz} & \\darkcell{Kapitol}\\\\ "
+"{darkyellow}}\\rule{\\textwidth}{0.5pt}} \\vspace*{1em} \\textbf{Siła "
+"Miasta}\\\\ \\bigskip \\begin{tabularx}{0.99\\linewidth}{p{0.12\\linewidth}"
+"XXXX} & \\darkcell{Osada} & \\darkcell{Ratusz} & \\darkcell{Kapitol}\\\\ "
 "\\darkcell[1.4]{Przychód} & \\lightcellleft[1.4]{10 \\svg{gold}, 0 "
 "\\svg{building_materials}, 0 \\svg{valuables}} & \\lightcellleft[1.4]{15 "
 "\\svg{gold}, 0 \\svg{building_materials}, 1 \\svg{valuables}} & "
