--- a/translations/random_scenario.tex/random_scenario.tex.pot
+++ b/translations/random_scenario.tex/random_scenario.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2025-07-02 10:48+0200\n"
+"POT-Creation-Date: 2025-10-23 22:06+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -71,11 +71,10 @@ msgid ""
 msgstr ""
 
 #. type: multicols
-#: coops/sentinels.tex:142 coops/close_to_enemies.tex:143
-#: coops/stand_united.tex:87 clash/dragoncurse_castle.tex:85
-#: campaigns/inferno_devilish_plan.tex:224 campaigns/castle_greek_gift.tex:120
-#: campaigns/castle_greek_gift.tex:271 sections/credits.tex:28
-#: sections/random_scenario.tex:304
+#: coops/sentinels.tex:142 coops/stand_united.tex:87
+#: clash/dragoncurse_castle.tex:85 campaigns/inferno_devilish_plan.tex:224
+#: campaigns/castle_greek_gift.tex:120 campaigns/castle_greek_gift.tex:271
+#: sections/credits.tex:28 sections/random_scenario.tex:304
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -337,11 +336,11 @@ msgstr ""
 #. type: minipage
 #: sections/random_scenario.tex:163
 msgid ""
-"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-"
-"xl-1.png}{1}\\playerarrow{-2.8}{0.2}{60}{castlebg} \\hfill "
-"\\playerimage{\\maps/free-for-all-xl-2.png}{2}\\playerarrow{-1.5}{0.2}{160}"
-"{infernobg} \\hfill \\playerimage{\\maps/free-for-all-xl-3.png}{3} "
-"\\playerarrow{-4.3}{2.6}{-60}{rampartbg}"
+"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-xl-1."
+"png}{1}\\playerarrow{-2.8}{0.2}{60}{castlebg} \\hfill \\playerimage{\\maps/"
+"free-for-all-xl-2.png}{2}\\playerarrow{-1.5}{0.2}{160}{infernobg} \\hfill "
+"\\playerimage{\\maps/free-for-all-xl-3.png}{3} \\playerarrow{-4.3}{2.6}{-60}"
+"{rampartbg}"
 msgstr ""
 
 #. type: center
@@ -356,11 +355,11 @@ msgstr ""
 #. type: minipage
 #: sections/random_scenario.tex:181
 msgid ""
-"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-"
-"xl-4.png}{4}\\playerarrow{-3.2}{3.2}{-30}{castlebg} \\hfill "
-"\\playerimage{\\maps/free-for-all-xl-5.png}{5}\\playerarrow{-0.8}{1.4}{210}"
-"{infernobg} \\hfill \\playerimage{\\maps/free-for-all-xl-6.png}{6} "
-"\\playerarrow{-3.6}{1.2}{120}{rampartbg}"
+"\\noindent \\hspace{0.01\\textwidth} \\playerimage{\\maps/free-for-all-xl-4."
+"png}{4}\\playerarrow{-3.2}{3.2}{-30}{castlebg} \\hfill \\playerimage{\\maps/"
+"free-for-all-xl-5.png}{5}\\playerarrow{-0.8}{1.4}{210}{infernobg} \\hfill "
+"\\playerimage{\\maps/free-for-all-xl-6.png}{6} \\playerarrow{-3.6}{1.2}{120}"
+"{rampartbg}"
 msgstr ""
 
 #. type: tikzpicture
@@ -411,9 +410,9 @@ msgid ""
 "{-0.3}{60}{infernobg} \\playerarrow{-0.6}{4.0}{-120}{castlebg} \\hfill "
 "\\playerimage{\\maps/free-for-all-xl-far-2.png}{8}\\playerarrow{-4.7}{4.3}"
 "{-60}{rampartbg} \\playerarrow{-5.2}{-0.1}{30}{infernobg} \\playerarrow{-0.9}"
-"{4.3}{-150}{castlebg} \\hfill \\playerimage{\\maps/free-for-all-xl-"
-"finish.png}{9} \\playerarrow{-5.2}{4.3}{-30}{rampartbg} \\playerarrow{-5.5}"
-"{0.9}{30}{infernobg} \\playerarrow{-0.3}{4.3}{-150}{castlebg}"
+"{4.3}{-150}{castlebg} \\hfill \\playerimage{\\maps/free-for-all-xl-finish."
+"png}{9} \\playerarrow{-5.2}{4.3}{-30}{rampartbg} \\playerarrow{-5.5}{0.9}{30}"
+"{infernobg} \\playerarrow{-0.3}{4.3}{-150}{castlebg}"
 msgstr ""
 
 #. type: subsection{#2}
