--- a/translations/the_hunt.tex/ru.po
+++ b/translations/the_hunt.tex/ru.po
@@ -67,10 +67,10 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
-"\\textbf{Стартовые юниты:}\n"
+"\\textbf{Стартовые отряды:}\n"
 "\\begin{itemize}\n"
-"  \\item «pack» \\svg{bronze} юнитов с \\textit{наименьшей} стоимостью найма\n"
-"  \\item «few» \\svg{bronze} юнитов с \\textit{наибольшей} стоимостью найма\n"
+"  \\item «pack» \\svg{bronze} отрядов с \\textit{наименьшей} стоимостью найма\n"
+"  \\item «few» \\svg{bronze} отрядов с \\textit{наибольшей} стоимостью найма\n"
 "\\end{itemize}\n"
 "\n"
 
@@ -81,37 +81,12 @@ msgstr ""
 #: campaigns/inferno_devilish_plan.tex:88
 #: campaigns/inferno_steadwicks_fall.tex:92
 #: campaigns/inferno_deal_with_the_devil.tex:52
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Map Setup}}\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{Подготовка карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{Подготовка Карты}}\n"
 "\n"
 
 #. type: multicols
@@ -123,52 +98,12 @@ msgstr ""
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
 #: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
 "\n"
 msgstr ""
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
 "\\subsection*{\\MakeUppercase{События по раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
-"\n"
-"#-#-#-#-#  ru.po (PACKAGE VERSION)  #-#-#-#-#\n"
-"\\subsection*{\\MakeUppercase{События по Раундам}}\n"
 "\n"
 
 #. type: multicols
@@ -184,7 +119,7 @@ msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\n"
 msgstr ""
-"\\subsection*{\\MakeUppercase{Дополнительные Правила}}\n"
+"\\subsection*{\\MakeUppercase{Дополнительные правила}}\n"
 "\n"
 
 #. type: multicols*
