--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2025-06-27 09:55+0200\n"
+"POT-Creation-Date: 2025-10-23 22:06+0100\n"
 "PO-Revision-Date: 2025-05-04 14:05+0000\n"
 "Last-Translator: Jakub Klus <jakub.klus@gmail.com>\n"
 "Language-Team: Czech <https://hosted.weblate.org/projects/homm3bg-fan-made-"
@@ -34,7 +34,7 @@ msgstr ""
 #: campaigns/castle_two_knights_defense.tex:5
 #: campaigns/castle_two_knights_defense.tex:91
 #: campaigns/castle_two_knights_defense.tex:129 sections/credits.tex:10
-#: sections/random_scenario.tex:5 sections/random_scenario.tex:285
+#: sections/random_scenario.tex:5 sections/random_scenario.tex:283
 #: sections/recommendations.tex:71 sections/recommendations.tex:126
 #: sections/what_to_play.tex:5
 #, no-wrap
@@ -150,7 +150,7 @@ msgstr ""
 #: campaigns/inferno_steadwicks_fall.tex:146
 #: campaigns/inferno_deal_with_the_devil.tex:97
 #: campaigns/castle_greek_gift.tex:87 campaigns/castle_sicilian_dragon.tex:95
-#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:287
+#: campaigns/castle_two_knights_defense.tex:93 sections/random_scenario.tex:285
 #, no-wrap
 msgid ""
 "\\subsection*{\\MakeUppercase{Timed Events}}\n"
@@ -164,7 +164,7 @@ msgstr ""
 #: coops/titans_stronghold.tex:116 coops/stand_united.tex:94
 #: clash/bloody_grail.tex:120 clash/bloody_grail.tex:126
 #: campaigns/inferno_devilish_plan.tex:204 sections/credits.tex:30
-#: sections/credits.tex:34 sections/random_scenario.tex:316
+#: sections/credits.tex:34 sections/random_scenario.tex:314
 #, no-wrap
 msgid ""
 "\\vspace*{\\fill}\n"
@@ -545,18 +545,18 @@ msgid ""
 "5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]{3\\bronze "
 "6\\silver 6\\golden 4\\azure \\linebreak Then\\linebreak 3\\bronze 6\\silver "
 "6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze 6\\silver 8\\golden "
-"6\\azure \\linebreak Then\\linebreak 2\\bronze 6\\silver 8\\golden 5\\azure}"
-"\\\\ \\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze 8\\silver "
-"4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver 5\\golden "
-"2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden 3\\azure "
-"\\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} & "
-"\\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak "
+"6\\azure \\linebreak Then\\linebreak 2\\bronze 6\\silver 8\\golden "
+"5\\azure}\\\\ \\darkcell[1.8]{6 players} & \\lightcell[1.8]{8\\bronze "
+"8\\silver 4\\golden 1\\azure \\linebreak Then\\linebreak 7\\bronze 7\\silver "
+"5\\golden 2\\azure} & \\lightcell[1.8]{6\\bronze 8\\silver 4\\golden "
+"3\\azure \\linebreak Then\\linebreak 6\\bronze 7\\silver 5\\golden 3\\azure} "
+"& \\lightcell[1.8]{3\\bronze 8\\silver 7\\golden 5\\azure \\linebreak "
 "Then\\linebreak 3\\bronze 7\\silver 8\\golden 4\\azure} & \\lightcell[1.8]"
 "{3\\bronze 7\\silver 11\\golden 6\\azure \\linebreak Then\\linebreak "
 "3\\bronze 8\\silver 10\\golden 6\\azure}\\\\ \\end{tabularx} }"
 msgstr ""
-"\\hommtable[]{28}{ \\centering \\medskip \\textbf{Síla Armád Pevnosti Titánů}"
-"\\\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
+"\\hommtable[]{28}{ \\centering \\medskip \\textbf{Síla Armád Pevnosti "
+"Titánů}\\\\ \\bigskip \\let\\origbronze\\bronze \\let\\origsilver\\silver "
 "\\let\\origgolden\\golden \\let\\origazure\\azure \\renewcommand{\\bronze}"
 "{\\origbronze[12]} \\renewcommand{\\silver}{\\origsilver[12]} "
 "\\renewcommand{\\golden}{\\origgolden[12]} \\renewcommand{\\azure}"
@@ -574,16 +574,16 @@ msgstr ""
 "{6\\bronze 7\\silver 5\\golden 3\\azure} & \\lightcell[1.8]{2\\bronze "
 "3\\silver 4\\golden 3\\azure \\linebreak Poté\\linebreak 2\\bronze 4\\silver "
 "3\\golden 2\\azure} & \\lightcell[1.8]{1\\bronze 3\\silver 5\\golden "
-"3\\azure \\linebreak Poté\\linebreak 1\\bronze 4\\silver 5\\golden 3\\azure}"
-"\\\\ \\darkcell[1.8]{4 Hráči} & \\lightcell[1.8]{10\\bronze 10\\silver "
-"\\linebreak 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze 10\\silver "
-"6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver 5\\golden "
-"3\\azure \\linebreak Poté\\linebreak 2\\bronze 5\\silver 5\\golden 3\\azure} "
-"& \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure \\linebreak "
-"Poté\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ \\darkcell[1.8]"
-"{5 Hráčů} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden 1\\azure "
-"\\linebreak Poté\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} & "
-"\\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak "
+"3\\azure \\linebreak Poté\\linebreak 1\\bronze 4\\silver 5\\golden "
+"3\\azure}\\\\ \\darkcell[1.8]{4 Hráči} & \\lightcell[1.8]{10\\bronze "
+"10\\silver \\linebreak 6\\golden 2\\azure} & \\lightcell[1.8]{8\\bronze "
+"10\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{2\\bronze 5\\silver "
+"5\\golden 3\\azure \\linebreak Poté\\linebreak 2\\bronze 5\\silver 5\\golden "
+"3\\azure} & \\lightcell[1.8]{1\\bronze 5\\silver 7\\golden 4\\azure "
+"\\linebreak Poté\\linebreak 1\\bronze 5\\silver 7\\golden 4\\azure}\\\\ "
+"\\darkcell[1.8]{5 Hráčů} & \\lightcell[1.8]{6\\bronze 6\\silver 4\\golden "
+"1\\azure \\linebreak Poté\\linebreak 7\\bronze 6\\silver 3\\golden 2\\azure} "
+"& \\lightcell[1.8]{5\\bronze 6\\silver 4\\golden 2\\azure \\linebreak "
 "Poté\\linebreak 5\\bronze 6\\silver 4\\golden 3\\azure} & \\lightcell[1.8]"
 "{3\\bronze 6\\silver 6\\golden 4\\azure \\linebreak Poté\\linebreak "
 "3\\bronze 6\\silver 6\\golden 4\\azure} & \\lightcell[1.8]{1\\bronze "
