--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -78,7 +78,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
 \begin{itemize}
   \item Once per Round at the beginning of a Level I-III Combat, the closest starting player may change one Neutral Unit to one Neutral Unit of the same or lower Tier from their Faction.
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
-  \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
+  \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck.
   \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up). \textit{Trading Post conversion may be used for this}.
   \item \textbf{Random Town:} On the next Resource Round, you may recruit one \textbf{Faction Unit} from the defending Faction for free.
   \item \textbf{Level VII Settlement:} You may Reinforce one Unit for half its Recruitment cost \textbf{and} increase all incomes by one space.
