--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -20,13 +20,13 @@ This Scenario plays out over 15 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Pack of chosen \bronze\ Units
-  \item A chosen Neutral \bronze\ Unit from the player's Faction
+  \item A Pack of chosen \bronze Units
+  \item A chosen Neutral \bronze Unit from the player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \bronze\ Dwelling
+  \item \bronze Dwelling
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
