new scenario by Salonens

--- a/draft-scenarios/clash/main.tex
+++ b/draft-scenarios/clash/main.tex
@@ -30,7 +30,11 @@
 
 \clearpage
 
-\input{clash/king_of_the_hill.tex}
+\input{clash/brothers_in_arms.tex}
+
+\clearpage
+
+\input{clash/wandering_dragons.tex}
 
 \clearpage
 
