new scenario, dragon decks as list

--- a/draft-scenarios/clash/wandering_dragons.tex
+++ b/draft-scenarios/clash/wandering_dragons.tex
@@ -56,12 +56,28 @@ If all of the Units from the Dragon Utopia and the Wandering Dragons are defeate
 
 \subsection*{\MakeUppercase{Additional Rules}}
 Dragon decks: With 2 players, randomly draw the following Neutral Dragon Unit Cards to two decks (DU = Dragon Utopia, WD = Wandering Dragons):
+
+\textbf{Easy:}
 \begin{itemize}
-  \item \textbf{Easy:} DU: 2 × \azure; WD: 2 × \golden.
-  \item \textbf{Normal:} DU: 2 × \azure, 1 × \golden; WD: 1 × \azure, 1 × \golden. 
-  \item \textbf{Hard:} DU: 3 × \azure; WD: 1 × \azure\, 2 × \gold.
-  \item \textbf{Impossible:} DU: 3 × \azure, 1 × \golden; WD: 2 × \azure, 1 × \golden.
+  \item DU: 2 × \azure
+  \item WD: 2 × \golden.
 \end{itemize}
+\textbf{Normal:}
+\begin{itemize}
+  \item DU: 2 × \azure, 1 × \golden
+  \item WD: 1 × \azure, 1 × \golden.
+\end{itemize}
+\textbf{Hard:}
+\begin{itemize}
+  \item DU: 3 × \azure
+  \item WD: 1 × \azure\, 2 × \golden.
+\end{itemize}
+\textbf{Impossible:}
+\begin{itemize}
+  \item DU: 3 × \azure, 1 × \golden
+  \item WD: 2 × \azure, 1 × \golden.
+\end{itemize}
+
 With 3 players, add one \golden Neutral Dragon to the DU deck.
 
 \begin{itemize}
