--- a/draft-scenarios/clash/astral_run.tex
+++ b/draft-scenarios/clash/astral_run.tex
@@ -26,7 +26,7 @@ This Scenario plays out over 15 Rounds.
 
 \textbf{Town Buildings:}
 \begin{itemize}
-  \item \bronze Dwelling
+  \item \bronze\ Dwelling
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
