--- a/draft-scenarios/clash/brothers_in_arms.tex
+++ b/draft-scenarios/clash/brothers_in_arms.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Brothers in Arms}{\images/berserk.png}
+\addscenariosection{1}{Cooperative Scenario}{Brothers in Arms}{\images/berserk.png}
 
 \begin{multicols*}{2}
 
@@ -33,7 +33,7 @@ Choose one:
 \begin{itemize}
   \item Search(3) \svg{skill}
   \item Search(3) \svg{spellpower}
-  \item Add a Few \bronze Units of the second highest Recruitment cost.
+  \item Add a Few \bronze\ Units of the second highest Recruitment cost.
 \end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes one random Far (II–III) Map Tile.
