fixed missing backslashes

--- a/draft-scenarios/clash/wandering_dragons.tex
+++ b/draft-scenarios/clash/wandering_dragons.tex
@@ -24,10 +24,10 @@ This Scenario plays out over 10 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Few of cheapest \bronze Units.
+  \item 2 × Few of cheapest \bronze\ Units.
 \end{itemize}
 
-\textbf{Town Buildings:} \bronze dwelling, Citadel
+\textbf{Town Buildings:} \bronze\ dwelling, Citadel
 
 \textbf{Map Tile Pool:} Each player takes 1 random Far (II-III) Map Tile.
 
@@ -59,26 +59,26 @@ Dragon decks: With 2 players, randomly draw the following Neutral Dragon Unit Ca
 
 \textbf{Easy:}
 \begin{itemize}
-  \item DU: 2 × \azure
+  \item DU: 2 × \azure\
   \item WD: 2 × \golden.
 \end{itemize}
 \textbf{Normal:}
 \begin{itemize}
-  \item DU: 2 × \azure, 1 × \golden
+  \item DU: 2 × \azure, 1 × \golden\
   \item WD: 1 × \azure, 1 × \golden.
 \end{itemize}
 \textbf{Hard:}
 \begin{itemize}
-  \item DU: 3 × \azure
-  \item WD: 1 × \azure\, 2 × \golden.
+  \item DU: 3 × \azure\
+  \item WD: 1 × \azure, 2 × \golden.
 \end{itemize}
 \textbf{Impossible:}
 \begin{itemize}
-  \item DU: 3 × \azure, 1 × \golden
+  \item DU: 3 × \azure, 1 × \golden\
   \item WD: 2 × \azure, 1 × \golden.
 \end{itemize}
 
-With 3 players, add one \golden Neutral Dragon to the DU deck.
+With 3 players, add one \golden\ Neutral Dragon to the DU deck.
 
 \begin{itemize}
   \item The WD starts from the Dragon Utopia and is marked with a negative Morale Token.
