--- a/draft-scenarios/clash/wandering_dragons.tex
+++ b/draft-scenarios/clash/wandering_dragons.tex
@@ -42,7 +42,7 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-If all of the Units from the Dragon Utopia and the Wandering Dragons are defeated, the game ends and the players win the scenario.
+If all of the Units from the Dragon Utopia and the Wandering Dragons are defeated, the game ends and the players win the Scenario.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{End of \nth{2} Round:}
