--- a/draft-scenarios/coops/wandering_dragons.tex
+++ b/draft-scenarios/coops/wandering_dragons.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Coop Scenario}{Wandering Dragons}{\images/dragon.png}
+\addscenariosection{1}{Cooperative Scenario}{Wandering Dragons}{\images/dragon.png}
 
 \begin{multicols*}{2}
 
