alliance to title

--- a/draft-scenarios/clash/brothers_in_arms.tex
+++ b/draft-scenarios/clash/brothers_in_arms.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Brothers in Arms}{\images/berserk.png}
+\addscenariosection{1}{Alliance Scenario}{Brothers in Arms}{\images/berserk.png}
 
 \begin{multicols*}{2}
 
