added alliance to title

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Dragon Valley}{\images/dragon.png}
+\addscenariosection{1}{Clash/Alliance Scenario}{Dragon Valley}{\images/dragon.png}
 
 \begin{multicols*}{2}
 
