Grammar and formatting fixes

--- a/draft-scenarios/coops/wandering_dragons.tex
+++ b/draft-scenarios/coops/wandering_dragons.tex
@@ -5,9 +5,11 @@
 
 \textbf{Author:} Niilo Salonen, Juhani Salonen
 
-\textit{The dragons of this region have grown increasingly erratic and dangerous. You and your allies have decided that the time has come to end their threat once and for all. Beware, however—some dragons have strayed from the
-Dragon Utopia and now roam the land. They will strike without hesitation if they feel threatened. Your mission
-is to slay all dragons in the area, both those guarding the Utopia and those wandering beyond its borders.}  % no-check-caps
+\textit{The dragons of this region have grown increasingly erratic and dangerous.
+You and your allies have decided that the time has come to end their threat once and for all.
+Beware, however—some dragons have strayed from the Dragon Utopia and now roam the land.
+They will strike without hesitation if they feel threatened.
+Your mission is to slay all dragons in the area, both those guarding the Utopia and those wandering beyond its borders.}  % no-check-caps
 
 \subsection*{\MakeUppercase{Scenario Length}}
 10 Rounds.
@@ -39,20 +41,20 @@ Take the following Map Tiles ($P$ stands for the number of players) and arrange 
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-Defeat the Wandering Dragons and flag the Dragon Utopia.
+Defeat the wandering dragons and flag the Dragon Utopia.
 
 \subsection*{\MakeUppercase{Timed Events}}
-\textbf{End of \nth{2} Round:}
-\begin{itemize}
-  \item Each player may resolve all Fields their closest starting player visited this Round. (Do not increase any income.)
-\end{itemize}
-\textbf{\nth{4} \& \nth{8} Round:}
+\textbf{\nth{4} Round:}
 \begin{itemize}
   \item Remove all Black Cubes from all Water Wheels and Windmills on the map.
 \end{itemize}
+\textbf{\nth{8} Round:}
+\begin{itemize}
+  \item Repeat the event of the \nth{4} Round.
+\end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
-Randomly draw the following Neutral Dragon Unit Cards to two \textbf{Dragon Decks}: Dragon Utopia (DU) and Wandering Dragons (WD):
+Randomly draw the following Neutral dragon Unit Cards into two \textbf{Dragon Decks}: Dragon Utopia (DU) and wandering dragons (WD):
 
 \textbf{Easy:}
 \begin{itemize}
@@ -77,15 +79,18 @@ Randomly draw the following Neutral Dragon Unit Cards to two \textbf{Dragon Deck
 \columnbreak
 
 \begin{itemize}
-  \item The WD start from the Dragon Utopia and is marked with a \svg{morale_negative} token.
-  \item The WD move at the end of every Round. Roll 2 Attack Dice and add +1 to the result. On a
+  \item The WD start from the Dragon Utopia and are marked with a \svg{morale_negative} token.
+  \item The WD move at the end of every Round. Roll 2 Attack Dice and add 1 to the result. On a result of:
   \begin{itemize}
-    \item +1, +2 or +3, the WD move that amount of Fields toward the player asset (Hero, Town or Settlement) that is closest to it.
-    \item 0, WD stay in place.
+    \item +1, +2, or +3, the WD move that amount of Fields toward the player asset (Hero, Town, or Settlement) that is closest to it.
+    \item 0, the WD stay in place.
     \item -1, the WD move one Field toward the DU.
   \end {itemize}
-  \item If the distance is the same to two or more player assets, the WD prioritize 1) Heroes, 2) Towns and 3) Settlements. If this does not resolve where the WD move, a die is thrown to determine the target.
-  \item The WD attack if they reach a Field with a Hero, Town or a Settlement with a Hero. In this case, the battle is fought until the end with a chance for Retreat or Surrender. If the WD reaches a Settlement without a Hero in it, the player instantly loses it.
+  \item If two or more player assets are equidistant, the WD prioritize 1)~Heroes, 2)~Towns and 3)~Settlements.
+    If this does not resolve which direction the WD should move, roll a die to determine the target.
+  \item The WD attack if they reach a Field with a Hero, a Town, or a Settlement with a Hero.
+    In this case, the battle is fought until the end with a chance for Retreat or Surrender.
+    If the WD reach a Settlement without a Hero in it, the player instantly loses it.
   \item The WD may move through Blocked Fields and will end their movement on an empty Field, if possible.
   \item If the WD are defeated, the player who defeated them gains \svg{morale_positive}.
   \item \textbf{Obelisk:} Roll \svg{treasure} and \svg{resource} and resolve both.
