--- a/draft-scenarios/coops/wandering_dragons.tex
+++ b/draft-scenarios/coops/wandering_dragons.tex
@@ -24,7 +24,7 @@ Your mission is to slay all dragons in the area, both those guarding the Utopia 
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Few of cheapest \bronze\ Units.
+  \item 2 × Few of the cheapest \bronze\ Units.
 \end{itemize}
 
 \textbf{Town Buildings:} \bronze\ Dwelling, Citadel
