Fix build error, reformat

--- a/draft-scenarios/clash/brothers_in_arms.tex
+++ b/draft-scenarios/clash/brothers_in_arms.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Alliance Scenario}{Brothers in Arms}{\images/berserk.png}
+\addscenariosection{1}{Alliance Scenario}{Brothers in Arms}{\images/chain_of_lightning.png}
 
 \begin{multicols*}{2}
 
@@ -7,10 +7,10 @@
 
 \textbf{Source:} \href{https://discord.com/channels/740870068178649108/1161571991732625468/threads/1164804609605390386}{Archon Studios Discord}
 
-\textit{Fight together. Die together.}  % no-check-caps
+\textit{Stand together. Fight together. Die together.}  % no-check-caps
 
 \subsection*{\MakeUppercase{Scenario Length}}
-This Scenario plays out over 12 Rounds.
+12 Rounds.
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2vs2 Alliance.
@@ -31,8 +31,7 @@ This Scenario plays out over 12 Rounds.
 \textbf{Additional Starting bonus:}
 Choose one:
 \begin{itemize}
-  \item Search(3) \svg{skill}
-  \item Search(3) \svg{spellpower}
+  \item Search (3) the Ability Deck
   \item A Few \bronze\ Units of the second highest Recruitment cost.
 \end{itemize}
 
@@ -45,36 +44,30 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 4 × Starting (I) Map Tiles.
   \item 2 × Far (II–III) Map Tiles.
   \item 4 × Near (IV–V) Map Tiles.
-  \item 3 × Center (VI–VII) Map Tiles.
+  \item 3 × Center (VI–VII) Map Tiles (one with a Dragon Utopia, one with a Grail).
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
-The game ends when one team has captured both enemy Starting Towns – \textit{That team wins the game} or at the end of Round 12. If no team has captured both enemy Starting Towns, one player from both teams engage in final Combat.
+Capture both enemy Starting Towns -- the game ends immediately.
+If no team manages to do so, at the end of Round 12 select one player from both teams to engage in final Combat.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{4} Round:}
 \begin{itemize}
   \item Remove all Black Cubes from the Map.
 \end{itemize}
-\textbf{\nth{6} Round:}
+\textbf{\nth{6} and \nth{9} Rounds:}
 \begin{itemize}
   \item All players may trade resources or artifacts with one other player.
-\end{itemize}
-\textbf{\nth{9} Round:}
-\begin{itemize}
-  \item Repeat event of Round 6.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item If two Heroes from the same team are on adjacent Fields, they can freely trade resources, Units and Artifacts.
+  \item If two allied Heroes are on adjacent Fields, they can freely trade resources, Units and Artifacts.
   \item \textbf{Dragon Utopia:} Gain one Neutral Dragon you defeated.
-  \item \textbf{Grail Token:} \svg{hand} Limit is increased to 10.
+  \item While posessing the \textbf{Grail Token}, your \svg{hand} limit is increased to 10.
 \end{itemize}
 
-\begin{center}
-  \vspace*{\fill}
-  \includegraphics[width=0.7\linewidth]{\maps/brothers_in_arms.png}
-  \captionof{figure}{\textbf{SCENARIO MAP LAYOUT}}
-  \vspace*{\fill}
-\end{center}
+\vspace*{\fill}
+\hspace*{-1.5em}\includegraphics[width=1.1\linewidth]{\maps/brothers_in_arms.png}
+\end{multicols*}
