--- a/draft-scenarios/clash/brothers_in_arms.tex
+++ b/draft-scenarios/clash/brothers_in_arms.tex
@@ -49,7 +49,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 Capture both enemy Starting Towns -- the game ends immediately.
-If no team manages to do so, at the end of Round 12 select one player from both teams to engage in final Combat.
+If no team manages to do so, at the end of the \nth{12} Round, select one player from each team to engage in final Combat.
 
 \subsection*{\MakeUppercase{Timed Events}}
 \textbf{\nth{4} Round:}
