--- a/draft-scenarios/coops/wandering_dragons.tex
+++ b/draft-scenarios/coops/wandering_dragons.tex
@@ -24,7 +24,7 @@ Your mission is to slay all dragons in the area, both those guarding the Utopia 
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Few of the cheapest \bronze\ Units.
+  \item 2 × Few of the cheapest \bronze\ Units
 \end{itemize}
 
 \textbf{Town Buildings:} \bronze\ Dwelling, Citadel
@@ -35,9 +35,9 @@ Your mission is to slay all dragons in the area, both those guarding the Utopia 
 Take the following Map Tiles ($P$ stands for the number of players) and arrange them as shown in the Scenario map layout:
 
 \begin{itemize}
-  \item P × Starting (I) Map Tiles.
-  \item 2P × Near (IV–V) Map Tiles.
-  \item 1 × Center (VI–VII) Map Tile with Dragon Utopia.
+  \item $P$ × Starting (I) Map Tiles
+  \item 2$P$ × Near (IV–V) Map Tiles
+  \item 1 × Center (VI–VII) Map Tile with Dragon Utopia
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
