--- a/draft-scenarios/clash/brothers_in_arms.tex
+++ b/draft-scenarios/clash/brothers_in_arms.tex
@@ -10,10 +10,10 @@
 \textit{Stand together. Fight together. Die together.}  % no-check-caps
 
 \subsection*{\MakeUppercase{Scenario Length}}
-12 Rounds.
+12 Rounds
 
 \subsection*{\MakeUppercase{Player Setup}}
-\textbf{Player Count:} 2vs2 Alliance.
+\textbf{Player Count:} 4 (2vs2 Alliance)
 
 \textbf{Starting Resources:} 20 \svg{gold}, 3 \svg{building_materials}, 1 \svg{valuables}
 
@@ -22,8 +22,8 @@
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item A Few of the cheapest \bronze\ Units.
-  \item A Few of the cheapest \silver\ Units.
+  \item A Few of the cheapest \bronze\ Units
+  \item A Few of the cheapest \silver\ Units
 \end{itemize}
 
 \textbf{Town Buildings:} \bronze\ Dwelling
@@ -32,7 +32,7 @@
 Choose one:
 \begin{itemize}
   \item Search (3) the Ability Deck
-  \item A Few \bronze\ Units of the second highest Recruitment cost.
+  \item A Few \bronze\ Units of the second highest Recruitment cost
 \end{itemize}
 
 \textbf{Map Tile Pool:} Each player takes one random Far (II–III) Map Tile.
@@ -41,10 +41,10 @@ Choose one:
 Take the following Map Tiles and arrange them as shown in the Scenario map layout:
 
 \begin{itemize}
-  \item 4 × Starting (I) Map Tiles.
-  \item 2 × Far (II–III) Map Tiles.
-  \item 4 × Near (IV–V) Map Tiles.
-  \item 3 × Center (VI–VII) Map Tiles (one with a Dragon Utopia, one with a Grail).
+  \item 4 × Starting (I) Map Tiles
+  \item 2 × Far (II–III) Map Tiles
+  \item 4 × Near (IV–V) Map Tiles
+  \item 3 × Center (VI–VII) Map Tiles (one with a Dragon Utopia, one with a Grail)
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
