--- a/draft-scenarios/coops/wandering_dragons.tex
+++ b/draft-scenarios/coops/wandering_dragons.tex
@@ -12,10 +12,10 @@ They will strike without hesitation if they feel threatened.
 Your mission is to slay all dragons in the area, both those guarding the Utopia and those wandering beyond its borders.}  % no-check-caps
 
 \subsection*{\MakeUppercase{Scenario Length}}
-10 Rounds.
+10 Rounds
 
 \subsection*{\MakeUppercase{Player Setup}}
-\textbf{Player Count:} 2-3 players.
+\textbf{Player Count:} 2-3
 
 \textbf{Starting Resources:} 6 \svg{gold}, 2 \svg{building_materials}, 0 \svg{valuables}
 
