unit-> units and rephrasing of a rule

--- a/draft-scenarios/clash/shattered_alliance.tex
+++ b/draft-scenarios/clash/shattered_alliance.tex
@@ -20,7 +20,7 @@ This Scenario plays out over 14 Rounds.
 \textbf{Starting Units:}
 
 \begin{itemize}
-  \item 2 × Chosen Neutral \bronze\ Unit from the closest starting player's Faction
+  \item 2 × Chosen Neutral \bronze\ Units from the closest starting player's Faction
 \end{itemize}
 
 \textbf{Town Buildings:} Citadel
@@ -76,7 +76,7 @@ If no player has achieved immediate victory, the player with the most Victory Po
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Once per Round at the beginning of a Level I-III Combat, the closest starting player may change one Neutral Unit to one Neutral Unit of the same or lower Tier from their Faction.
+  \item Each player may, once per Round, replace one Neutral Unit with a Neutral Unit of the same tier from their own Faction when their closest starting player starts a Level I–III combat.
   \item \textbf{Sanctuary:} Choose 1 \svg{spellpower} from your M\&M Deck and add it to your hand, then reshuffle your Deck. \textit{Visitable once per Faction.}
   \item \textbf{Obelisk:} Choose 1 \svg{artifact} from your M\&M Deck and add it to your hand, then reshuffle your Deck.
   \item \textbf{Dragon Utopia:} Defended only by Dragons. Recruit one Neutral Dragon you defeated for half its recruitment cost (rounded up). \textit{Trading Post conversion may be used for this}.
