Introduce alliance section

--- a/draft-scenarios/structure.tex
+++ b/draft-scenarios/structure.tex
@@ -6,6 +6,8 @@
 
 \include{clash/main.tex}
 
+\include{alliances/main.tex}
+
 \include{campaigns/main.tex}
 
 \include{sections/coop_campaign_rules.tex}
