--- a/draft-scenarios/alliances/gold_rush.tex
+++ b/draft-scenarios/alliances/gold_rush.tex
@@ -1,5 +1,5 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Solo/Clash/Alliance Scenario}{Gold Rush}{\images/gold-mine.png}
+\addscenariosection{1}{Alliance/Clash/Solo Scenario}{Gold Rush}{\images/gold-mine.png}
 
 \begin{multicols*}{2}
 
