--- a/translations/sentinels.tex/ru.po
+++ b/translations/sentinels.tex/ru.po
@@ -402,6 +402,7 @@ msgid ""
 "\\end{itemize}\n"
 "\n"
 msgstr ""
+"\\columnbreak\n"
 "\\textbf{Раунд 10:}\n"
 "\\begin{itemize}\n"
 "  \\item Разместите вражескую армию в соответствии с правилами ниже.\n"
